@@ -15,6 +15,13 @@ portage-2.2
 * Add support for news items (GLEP 42)
 * Add support for generic package sets (also see RELEASE-NOTES)
 
+portage-2.1.5
+==================================
+
+* The dependency resolver now has a feedback mechanism that helps make atom
+  selections more consistent with previous selections that have been added to
+  the graph. This solves some common cases of bug #1343.
+
 portage-2.1.4
 -------------
 
